--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -21,12 +21,14 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@vercel/blob": "^1.1.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "database": "workspace:*",
     "drizzle-orm": "^0.29.0",
     "lucide-react": "^0.536.0",
+    "nanoid": "^5.1.5",
     "next": "15.4.5",
     "next-auth": "^4.24.0",
     "next-themes": "^0.4.6",
