--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -45,7 +45,7 @@
     "jest-expo": "~53.0.9",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "react-test-renderer": "19.0.0",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "3.4.17",
     "typescript": "~5.8.3"
   },
   "private": true
