--- a/apps/admin/tsconfig.json
+++ b/apps/admin/tsconfig.json
@@ -28,6 +28,6 @@
     "baseUrl": ".",
     "composite": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "../../packages/*/src/**/*.ts"],
   "exclude": ["node_modules"]
 }
