--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -9,21 +9,22 @@
     "dev": "tsc --watch",
     "type-check": "tsc --noEmit",
     "generate": "drizzle-kit generate:pg",
-    "migrate": "tsx src/migrate.ts",
     "studio": "drizzle-kit studio",
-    "seed": "tsx src/seed/index.ts"
+    "migrate": "tsx src/migrate.ts"
   },
   "dependencies": {
+    "@types/pg": "^8.15.5",
     "drizzle-orm": "^0.29.0",
     "drizzle-zod": "^0.5.0",
+    "pg": "^8.16.3",
     "postgres": "^3.4.0",
     "shared": "workspace:*"
   },
   "devDependencies": {
+    "@types/node": "^20.0.0",
     "drizzle-kit": "^0.20.0",
     "tsx": "^4.0.0",
-    "typescript": "^5.0.0",
-    "@types/node": "^20.0.0"
+    "typescript": "^5.0.0"
   },
   "private": true
-} 
+}
