--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -16,8 +16,10 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^7.1.6",
     "@tanstack/react-query": "^5.0.0",
+    "database": "workspace:*",
     "expo": "~53.0.20",
     "expo-font": "~13.3.2",
     "expo-linking": "~7.1.7",
@@ -34,9 +36,8 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
-    "zustand": "^4.4.0",
     "shared": "workspace:*",
-    "database": "workspace:*"
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
